# haskell-project-practice

./: CHANGELOG.md  README.md  haskell-project-practice.cabal  hie.yaml
.github/workflows/: haskell.yml
