cabal-version:       2.4
-- Initial package description 'haskell-project-practice.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:                haskell-project-practice
version:             0.1.0.0
synopsis:            project for learning cabal
-- description:
homepage:            https://github.com/nmjr-311/haskell-project-practice
-- bug-reports:
license:             BSD-3-Clause
license-file:        LICENSE
author:              nmjr-311
maintainer:          nmjr31@gmail.com
-- copyright:
-- category:
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     MyLib
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-project-practice
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base ^>=4.13.0.0, haskell-project-practice
  hs-source-dirs:      app
  default-language:    Haskell2010

test-suite haskell-project-practice-test
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             MyLibTest.hs
  build-depends:       base ^>=4.13.0.0
