cabal-version:      2.4

-- Initial package description 'haskell-project-practice.cabal' generated
-- by 'cabal init'.  For further documentation, see
-- http://haskell.org/cabal/users-guide/

name:               haskell-project-practice
version:            0.1.0.0
synopsis:           project for learning cabal

-- description:
homepage:           https://github.com/nmjr-311/haskell-project-practice

-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             nmjr-311
maintainer:         nmjr31@gmail.com

-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:    base ^>=4.13.0.0

common test-depends
  build-depends:      hspec ^>=2.7.4
  build-tool-depends: hspec-discover:hspec-discover -any

library
  import:          shared-properties

  -- cabal-fmt: expand src
  exposed-modules: MyLib

  -- other-modules:
  -- other-extensions:
  hs-source-dirs:  src

executable haskell-project-practice
  import:         shared-properties
  main-is:        Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:  haskell-project-practice
  hs-source-dirs: app

test-suite haskell-project-practice-test
  import:         shared-properties, test-depends
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        MyLibTest.hs
  build-depends:  haskell-project-practice

  -- cabal-fmt: expand test -Spec
  other-modules:  MyLibSpec
